feat: Implement batch validation results persistence for rules engine